--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,24 @@
 {
   "name": "backend",
-  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@bull-board/express": "^4.10.0",
+    "@types/express": "^4.17.15",
     "bull": "^4.10.2",
     "bullmq": "^3.5.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.2",
     "nodemon": "^2.0.20",
-    "octokit": "^2.0.10"
+    "octokit": "^2.0.10",
+    "ts-node": "^10.9.1"
   }
 }
