--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@bull-board/express": "^4.10.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "bull": "^4.10.2",
     "bullmq": "^3.5.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.2",
