--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
