--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.2",
+    "devicon": "^2.15.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "i": "^0.3.7",
