--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
     "@bull-board/express": "^4.10.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.1",
     "bull": "^4.10.2",
     "bullmq": "^3.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "nodemon": "^2.0.20",
     "octokit": "^2.0.10",
